<resources>
    <string name="app_name">Orixpense</string>
    <string name="next">Next</string>
    <string name="gain_total" />
    <string name="know_where_your_money_goes" />
    <string name="by_signing_">By signing up, you agree to the Terms of Service and Privacy Policy</string>
    <string name="already_hav">Already have an account? Login</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="don_t_have_an_account_yet_sign_up">Don’t have an account yet? Sign Up</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="name">Username:</string>
    <string name="email">Email:</string>
    <string name="pass">Password:</string>
    <string name="forgot_P_txt">Don’t worry. Enter your email and we’ll send you a link to reset your password.</string>
    <string name="checkemail">Check your email test@test.com and follow the instructions to reset your password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>