<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding_signup_Activity"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:fontFamily="@font/interbold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/btn_back_signup"
            android:layout_marginLeft="10dp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:textColor="@color/white"
            android:background="@drawable/turn_back_icon"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/input_field_name"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:background="@drawable/input_box">

        <EditText
            android:id="@+id/name_signup"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:padding="15dp"
            android:textColorHint="@color/gray"

            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_field_email"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:background="@drawable/input_box" >

        <EditText
            android:id="@+id/email_signup"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:padding="15dp"
            android:textColorHint="@color/gray"

            />.
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/input_field_password"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:background="@drawable/input_box">

        <EditText
            android:id="@+id/pass_signup"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:hint="@string/pass"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:padding="15dp"
            android:textColorHint="@color/gray"
            android:password="true"
            />.

    </RelativeLayout>


    <Button
        android:id="@+id/btnsignup"
        android:text="sign up"
        android:fontFamily="@font/intermedium"
        android:textColor="@color/white"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="500dp"
        android:background="@drawable/button_larg_blue"
        />

    <TextView
        android:id="@+id/have_acc"
        android:layout_width="244dp"
        android:layout_height="19dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginTop="590dp"
        android:text="@string/already_hav"
        android:textColor="@color/gray"
        />



</RelativeLayout>